--- a/pages/index.html
+++ b/pages/index.html
@@ -3,7 +3,7 @@
 
 @@include('../templates/header.html')
 
-@@include('../templates/blocks/menu.html'<!-- )
+@@include('../templates/blocks/menu.html')
 @@include('../templates/blocks/menu-list.html')
 @@include('../templates/blocks/advantages.html')
 @@include('../templates/blocks/offers.html')
@@ -11,10 +11,10 @@
 @@include('../templates/blocks/clients.html')
 @@include('../templates/blocks/map.html')
 @@include('../templates/blocks/form.html')
-@@include('../templates/blocks/share.html') -->
+@@include('../templates/blocks/share.html')
 
 @@include('../templates/footer.html')
 
 
-<!-- @@include('../templates/scripts.html') -->
+@@include('../templates/scripts.html')
 @@include('../templates/body-close.html')
